ingress/ingress-nginx/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-whoami
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-ot-nlb
            port:
              number: 80
  ingressClassName: nginx
